--- a/[trash]/markup.8.html
+++ b/[trash]/markup.8.html
@@ -9,18 +9,18 @@
 
   <template id="source-header">
     <header>
-      <div id="summary">
-        <span title="source">#<span id="source"></span><time unit=ms></time></span>
+      <div id=summary>
+        <span title=source>#<span id=source></span><time unit=ms></time></span>
       </div>
-      <div id="details">
-        <span title="type"><b><span id="source-type"></b></span></span>
-        <span title="repeats"><span id="repeats"></span><time unit=ms></time></span>
-        <span title="iterations"><span id="iterations"></span><time unit=ms></time></span>
+      <div id=details>
+        <span title=type><b><span id=source-type></b></span></span>
+        <span title=repeats><span id=repeats></span><time unit=ms></time></span>
+        <span title=iterations><span id=iterations></span><time unit=ms></time></span>
       </div>
-      <div id="controls">
+      <div id=controls>
         <span>
-          <a id="rerender" title="Rerender" onclick="click()"><i icon>&#x27f3;</i></a>
-          <a id="contrast" title="Dark/Light Mode" onclick="click()" ondblclick="doubleClick()"><i icon>&#x263D;</i></a>
+          <a id=rerender title=Rerender onclick=click()><i icon>&#x27f3;</i></a>
+          <a id=contrast title=Dark/Light Mode onclick=click() ondblclick=doubleClick()><i icon>&#x263D;</i></a>
         </span>
       </div>
     </header>
@@ -41,23 +41,24 @@
       {
         const defaults = { darkMode: true };
         const element = document.currentScript.parentElement;
+        const {classList} = element;
         // TODO: Add support for @media (prefers-dark-mode) when it lands
         const prefersColorSchemeDark = matchMedia('(prefers-color-scheme: dark)');
         const prefersColorSchemeLight = matchMedia('(prefers-color-scheme: light)');
         (
           prefersColorSchemeDark.matches &&
-          !element.classList.add('prefers-dark-mode') ||
+          !classList.add('prefers-dark-mode') ||
           localStorage.darkMode == "true" ||
           (defaults.darkMode && localStorage.lightMode != "true")
-        ) && element.classList.add('dark-mode');
+        ) && classList.add('dark-mode');
         prefersColorSchemeDark.addListener && prefersColorSchemeDark.addListener(({ matches = false }) => {
           !matches ? (
-            element.classList.remove('prefers-dark-mode'),
-            element.classList.contains('dark-mode') && localStorage.darkMode != "true" && element.classList.remove('dark-mode')
+            classList.remove('prefers-dark-mode'),
+            classList.contains('dark-mode') && localStorage.darkMode != "true" && classList.remove('dark-mode')
           ) : (
-              element.classList.add('prefers-dark-mode'),
-              !element.classList.contains('dark-mode') &&
-              localStorage.lightMode != "true" && element.classList.add('dark-mode')
+              classList.add('prefers-dark-mode'),
+              !classList.contains('dark-mode') &&
+              localStorage.lightMode != "true" && classList.add('dark-mode')
             )
         });
         element.hidden = false;
@@ -76,6 +77,7 @@
       element: 'pre#source-code',
       headerTemplate: 'template#source-header',
     }
+    // const hashMatcher = /#(.*?)(?:\!([a-z]+)|\!.*?)?(?:\*(?!\*)(\d+))?(?:\*{2}(\d+))?$/;
     const hashMatcher = /#(.*?)(?:\!([a-z]+))?(?:\*(?!\*)(\d+))?(?:\*{2}(\d+))?$/;
     const options = Object.create(defaults);
     const sourceCodeElement = document.querySelector(options.element);
@@ -115,13 +117,18 @@
 
       header.elements = {};
 
-      if (selectors)
-        for (const [id, selector] of Object.entries(selectors))
+      if (selectors) {
+        for (const [id, selector] of Object.entries(selectors)) {
           header.elements[id] = selector && header.querySelector(selector) || undefined;
+        }
+      }
 
       {
         const { 'rerender-button': renderButton, 'contrast-button': contrastButton } = header.elements;
+
         renderButton && (renderButton.click = rerender);
+
+
         contrastButton && (
           contrastButton.click = () => {
             header.parentElement.classList.toggle('dark-mode')
@@ -148,11 +155,14 @@
         header.timing[name] === (header.timing[name] = value);
         const status = header.status[name] || 'done';
         const element = header.elements[`${name}-time`];
+        // const text = value === true ? '…' : value >= 0 ? `${value} ms` : '';
         const text = `${value !== true && value >= 0 && value || ''}`;
         element ? (
           element.setAttribute('value', text),
           element.innerText = value === true && '…' || text
         ) : console.info('[%s] %o — %o', name, status, value)
+        // value ? element.setAttribute('value', text) : element
+        // element ? element.innerText = text : text && console.info('[%s] %o — %o', name, status, value);
       }
 
       header.stats = ({ name, status, time }) => {
@@ -163,8 +173,9 @@
       }
 
       header.reset = () => {
-        for (const [id, element] of Object.entries(header.elements))
+        for (const [id, element] of Object.entries(header.elements)) {
           /-time|-span/.test(id) && (element.innerText = '');
+        }
       }
 
       return header;
@@ -175,12 +186,12 @@
 
     const renderFromURL = async (specifier, sourceType) => {
       let returned, fragment, render;
-      const { repeats = 1, iterations = 1, now = Date.now } = options;
 
+      const { repeats = 1, iterations = 1 } = options;
       const container = sourceCodeElement;
-      const rerender = () => render();
-      const header = renderHeader({ rerender });
-      const code = document.createElement('slot');
+      const now = options.now || Date.now;
+
+      const header = renderHeader({ rerender: () => render() });
       const { timing, status } = header;
       const time = async (name, executor, cycles = 1) => {
         let start, result, end, elapsed;
@@ -190,11 +201,14 @@
         elapsed = end - start;
         timing && timing(name, round(elapsed / cycles));
         return { name, executor, start, result, end, elapsed };
-      };
+      }
 
-      container.innerHTML = '', container.append(header, code);
+      container.innerHTML = '';
+      container.appendChild(header);
+      const code = container.appendChild(document.createElement('slot'));
 
       try {
+
         await nextFrame(header.status('source', `${specifier}`), header.timing('source', true));
         const { result: { sourceText, response } } = await time('source', () => loadFromURL(specifier));
         sourceType = `${sourceType || response.headers.get('Content-Type') || options.sourceType}`.replace(/^(?:.*?\/)?(\w+).*$/, '$1').toLowerCase();
@@ -234,7 +248,7 @@
           }
 
           if (repeats > 0) {
-            // await timeDelay(100);
+            await timeDelay(100);
             await nextFrame(header.stats({ name: 'repeats', status: `⁎${repeats}`, time: true }));
             await timed(`${repeats} repeats`, 'repeats', async ƒ => void await repeat(repeats), repeats);
             await nextFrame(header.status('repeats', `⁎${repeats}`));
@@ -261,7 +275,8 @@
       options.repeats = repeats >= 0 ? parseInt(repeats) : defaults.repeats;
       options.iterations = iterations >= 0 ? parseInt(iterations) : defaults.iterations;
 
-      const example = /^\w+|\w+[\w\-]*\w?$/.test(specifier) && examples[specifier] || '';
+      const example = /^\w[\w\-]*$/.test(specifier) && examples[specifier] || '';
+
       const source = (specifier && (example.url || example) || specifier);
       const sourceURL = (source && (options.source = source)) || options.source || (options.source = defaults.sourceURL);
       const sourceType = type || (example.type) || undefined;
@@ -274,12 +289,12 @@
 
     requestAnimationFrame(() => renderFromHash(location.hash !== '#' && location.hash || `#${defaults.sourceURL}`));
 
+
     const examples = {
       "markup": "./lib/markup-parser.js",
       "markup-api": "./lib/markup.js",
       "markup-dom": "./lib/markup-dom.js",
       "markup-modes": "./lib/markup-modes.js",
-      "gfm": "./benchmarks/assets/gfm.md",
       "leo-routes": "./benchmarks/assets/pholio-routes-profile.js",
       "punctuation": "./benchmarks/assets/punctuation.js",
       "babel": "./benchmarks/assets/babel.js",
