--- a/packages/tokenizer/examples/browser/es.html
+++ b/packages/tokenizer/examples/browser/es.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SMotaal's Tokenizer</title>
+    <title>SMotaal's ECMAScript Tokenizer</title>
     <meta charset="utf-8" />
     <base href="." />
     <meta
@@ -30,7 +30,7 @@
 
   <body>
     <pre id="source-code" class="markup-container" hidden>
-    <script src="./ui.js"></script>
+      <script src="./ui.js"></script>
     </pre>
     <script type="module">
       import * as markup from '../es.mjs';
