--- a/packages/@smotaal/tokenizer/examples/browser/es.html
+++ b/packages/@smotaal/tokenizer/examples/browser/es.html
@@ -33,7 +33,7 @@
       <script src="./ui.js"></script>
     </pre>
     <script type="module">
-      import * as markup from '../es.mjs';
+      import * as markup from '../../browser/es.js';
       import api from './api.js';
       api(markup, {sourceURL: '../../lib/tokenizer.mjs'});
     </script>
