--- a/packages/@smotaal/tokenizer/examples/browser/index.html
+++ b/packages/@smotaal/tokenizer/examples/browser/index.html
@@ -33,7 +33,7 @@
       <script src="./ui.js"></script>
     </pre>
     <script type="module">
-      import * as markup from '../markup.mjs';
+      import * as markup from '../../browser/markup.js';
       import api from './api.js';
       api(markup);
     </script>
