Update tokenizer samples

--- a/packages/@smotaal/tokenizer/examples/samples/demo.html
+++ b/packages/@smotaal/tokenizer/examples/samples/demo.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <!--
-  SAMPLE.HTML
+  DEMO.HTML
   This file inlines some css and js code into the
   same html source used by the tokenizer demo.
 -->
