--- a/packages/@smotaal/tokenizer/examples/samples/demo.html
+++ b/packages/@smotaal/tokenizer/examples/samples/demo.html
@@ -440,7 +440,7 @@
       };
 
       const entrypoints = {
-        ['js']: '../../lib/tokenizer.mjs',
+        ['js']: '../../lib/tokenizer.js',
         ['css']: './markup.css',
         ['html']: './index.html',
         ['md']: '../../README.md',
