--- a/packages/@smotaal/tokenizer/examples/browser/index.html
+++ b/packages/@smotaal/tokenizer/examples/browser/index.html
@@ -8,6 +8,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover"
     />
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+
     <link rel="stylesheet" href="styles.css" />
 
     <template id="source-header">
