--- a/updates.html
+++ b/updates.html
@@ -78,7 +78,7 @@
         background-color: #fffffff6;
       }
     </style>
-    <script type="module" src="/markout/preview.js"></script>
+    <script type="module" src="/browser/markout-preview.js"></script>
   </head>
 
   <body>
