--- a/packages/@smotaal/tokenizer/index.html
+++ b/packages/@smotaal/tokenizer/index.html
@@ -38,7 +38,7 @@
     </style>
     <!-- <script type="module" src="/quench/dist/markout.standalone.js"></script> -->
     <!-- <script type="module" src="/quench/lib/browser/markout.js"></script> -->
-    <script type="module" src="/markout/preview.js"></script>
+    <script type="module" src="/browser/markout-preview.js"></script>
   </head>
 
   <body>
