Cleanup implementation and examples

--- a/packages/@smotaal/tokenizer/examples/browser/dist.html
+++ b/packages/@smotaal/tokenizer/examples/browser/dist.html
@@ -33,7 +33,7 @@
       <script src="./ui.js"></script>
     </pre>
     <script type="module">
-      import * as markup from '../../dist/tokenizer.browser.mjs';
+      import * as markup from '../../dist/tokenizer.browser.js';
       import api from './api.js';
       api(markup);
     </script>
