Fix inconsistencies between entrypoints (consolidated styleheets)

--- a/packages/@smotaal/tokenizer/examples/browser/experimental.html
+++ b/packages/@smotaal/tokenizer/examples/browser/experimental.html
@@ -3,14 +3,10 @@
   <head>
     <title>SMotaal's Tokenizer (experimental)</title>
     <meta charset="utf-8" />
-    <base href="." />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
 
     <template id="source-header">
       <div id="summary">
