--- a/markup.html
+++ b/markup.html
@@ -3,15 +3,9 @@
   <head>
     <title>SMotaal's Markup</title>
     <meta charset="utf-8" />
-    <base href="." />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-
     <link rel="stylesheet" href="./packages/@smotaal/tokenizer/examples/browser/styles.css" />
-
     <template id="source-header">
       <div id="summary">
         <span title="source">#<span id="source"></span><time unit="ms"></time></span>
