Cleanup markout entrypoints

--- a/updates.html
+++ b/updates.html
@@ -1,14 +1,13 @@
 ﻿<!DOCTYPE html>
-<html checkerboard>
+<html>
   <head>
-    <title>Markout</title>
+    <title>SMotaal's Markup Updates</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <link rel="stylesheet" href="/pholio/styles/fonts/iosevka/iosevka.css" />
-    <link rel="stylesheet" href="/pholio/styles/styles.css" />
+		<link rel="stylesheet" href="/pholio/styles/styles.css" />
+		<link rel="stylesheet" href="/markout/styles/sections.css" />
     <style>
-      @import '/markout/styles/sections.css';
-
       html {
         --shade: #6699aaf6;
       }
