--- a/index.html
+++ b/index.html
@@ -1,39 +1,15 @@
 ﻿<!DOCTYPE html>
-<html checkerboard>
+<html>
   <head>
-    <title>Markout</title>
+    <title>SMotaal's Markup</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-		<link rel="stylesheet" href="/pholio/styles/fonts/iosevka/iosevka.css" />
-    <link rel="preload" as="style" href="/pholio/styles/typography.css" />
-    <link rel="preload" as="style" href="/pholio/styles/layouts/grids.css" />
-    <link rel="preload" as="style" href="/pholio/styles/common.css" />
+    <link rel="stylesheet" href="/pholio/styles/fonts/iosevka/iosevka.css" />
+		<link rel="stylesheet" href="/pholio/styles/styles.css" />
     <link rel="alternate" href="./README.md" type="text/markdown" />
     <style>
-      @import '/pholio/styles/styles.css';
-
       html {
         --shade: #6699aaf6;
-      }
-
-      html,
-      body,
-      body > main {
-        display: grid;
-        box-sizing: border-box;
-        margin: 0;
-      }
-
-      body > main > script,
-      body > main > style {
-        display: none;
-      }
-
-      body > main > markout-content {
-        opacity: 1;
-        background-color: #fffffff6;
-        box-shadow: 0 1px 20px -10px #000;
-        box-sizing: initial;
       }
     </style>
     <script type="module" src="/browser/markout-preview.js"></script>
@@ -43,6 +19,5 @@
     <main>
       <markout-content></markout-content>
     </main>
-    <!-- <markout-content src="./README.md"></markout-content> -->
   </body>
 </html>
