Update entrypoints for in-place-navigation

--- a/index.html
+++ b/index.html
@@ -2,22 +2,9 @@
 <html>
   <head>
     <title>SMotaal's Markup</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-    <link rel="stylesheet" href="/pholio/styles/fonts/iosevka/iosevka.css" />
-		<link rel="stylesheet" href="/pholio/styles/styles.css" />
-    <link rel="alternate" href="./README.md" type="text/markdown" />
-    <style>
-      html {
-        --shade: #6699aaf6;
-      }
-    </style>
-    <script type="module" src="/browser/markout-preview.js"></script>
+    <meta http-equiv="refresh" content="0; URL=/#/markup/README.md" />
   </head>
-
   <body>
-    <main>
-      <markout-content></markout-content>
-    </main>
+    <p>This page has moved <a href="/#/markup/README.md">/markup/</a>.</p>
   </body>
 </html>
