--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <meta http-equiv="refresh" content="0; URL=/#/markup/README.md" />
   </head>
   <body>
-    <p>This page has moved <a href="/#/markup/README.md">/markup/</a>.</p>
+    <p>This page has moved <a href="/#/markup/README.md">here</a>.</p>
   </body>
 </html>
