Remove experimental parser from `markup.html`

--- a/markup.html
+++ b/markup.html
@@ -29,7 +29,7 @@
       <script src="./packages/@smotaal/tokenizer/examples/browser/ui.js"></script>
     </pre>
     <script type="module">
-      import * as markup from './packages/@smotaal/tokenizer/browser/markup.experimental.js';
+      import * as markup from './packages/@smotaal/tokenizer/browser/markup.js';
       import * as parser from './lib/markup-parser.js';
       import * as modes from './lib/markup-modes.js';
 
