--- a/markup.html
+++ b/markup.html
@@ -37,8 +37,8 @@
 
       markup.parsers.push(parser);
 
-      import api from './packages/@smotaal/tokenizer/examples/browser/api.js';
-      api(markup);
+      import demo from './packages/@smotaal/tokenizer/examples/browser/demo.js';
+      demo(markup);
     </script>
   </body>
 </html>
