--- a/packages/@smotaal/tokenizer/examples/browser/experimental.html
+++ b/packages/@smotaal/tokenizer/examples/browser/experimental.html
@@ -32,8 +32,8 @@
     </pre>
     <script type="module">
       import * as markup from '../../browser/markup.experimental.js';
-      import api from './api.js';
-      api(markup);
+      import demo from './demo.js';
+      demo(markup);
     </script>
   </body>
 </html>
