--- a/packages/@smotaal/tokenizer/examples/browser/dist.html
+++ b/packages/@smotaal/tokenizer/examples/browser/dist.html
@@ -30,8 +30,8 @@
     </pre>
     <script type="module">
       import * as markup from '../../dist/tokenizer.browser.js';
-      import api from './api.js';
-      api(markup);
+      import demo from './demo.js';
+      demo(markup);
     </script>
   </body>
 </html>
