Implement markup-lines and improve headers in demo

--- a/packages/@smotaal/tokenizer/examples/browser/experimental.html
+++ b/packages/@smotaal/tokenizer/examples/browser/experimental.html
@@ -10,10 +10,10 @@
 
     <template id="source-header">
       <div id="summary">
-        <span title="source">#<span id="source"></span><time unit="ms"></time></span>
+        <span title="source"><span id="source"></span><time unit="ms"></time></span>
       </div>
       <div id="details">
-        <span title="type"><span id="source-type"></span></span>
+        <span title="mode"><span id="mode"></span><span id="variant"></span></span>
         <span title="iterations"><span id="iterations"></span><time unit="ms"></time></span>
         <span title="repeats"><span id="repeats"></span><time unit="ms"></time></span>
       </div>
