--- a/experimental.html
+++ b/experimental.html
@@ -17,7 +17,7 @@
       </div>
       <div id="controls">
         <span>
-          <a id="rerender" title="Repeat" onclick><i icon>&#x27f3;</i></a>
+          <a id="rerender" title="Repeat" onclick><i icon>&#x2301;</i></a>
           <a id="contrast" title="Dark/Light" onclick><i icon>&#x263D;</i></a>
         </span>
       </div>
