--- a/packages/@smotaal/tokenizer/examples/samples/demo.html
+++ b/packages/@smotaal/tokenizer/examples/samples/demo.html
@@ -198,7 +198,7 @@
       <script src="./ui.js"></script>
     </pre>
     <script type="module">
-      import * as markup from '../../browser/markup.js';
+      import * as markup from '../../browser/extended.js';
       const defaults = {
         version: 1,
         repeats: 1,
