--- a/packages/@smotaal/tokenizer/examples/browser/experimental.html
+++ b/packages/@smotaal/tokenizer/examples/browser/experimental.html
@@ -7,23 +7,6 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 
     <link rel="stylesheet" href="./styles.css" />
-
-    <template id="source-header">
-      <div id="summary">
-        <span title="source"><span id="source"></span><time unit="ms"></time></span>
-      </div>
-      <div id="details">
-        <span title="mode"><span id="mode"></span><span id="variant"></span></span>
-        <span title="iterations"><span id="iterations"></span><time unit="ms"></time></span>
-        <span title="repeats"><span id="repeats"></span><time unit="ms"></time></span>
-      </div>
-      <div id="controls">
-        <span>
-          <a id="rerender" title="Repeat" onclick><i icon>&#x27f3;</i></a>
-          <a id="contrast" title="Dark/Light" onclick><i icon>&#x263D;</i></a>
-        </span>
-      </div>
-    </template>
   </head>
 
   <body>
@@ -31,7 +14,7 @@
       <script src="./ui.js"></script>
     </pre>
     <script type="module">
-      import * as markup from '../../browser/markup.experimental.js';
+      import * as markup from '../../browser/experimental.extended.js';
       import demo from './demo.js';
       demo(markup);
     </script>
