--- a/markup.preload.html
+++ b/markup.preload.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
   <link rel="preload" href="./packages/@smotaal/tokenizer/examples/browser/ui.js" as="script" />
-  <script type="module" src="../packages/@smotaal/tokenizer/browser/extended.js"></script>
-  <script type="module" src="../packages/@smotaal/tokenizer/examples/browser/demo.js"></script>
+  <script type="module" src="./packages/@smotaal/tokenizer/browser/extended.js"></script>
+  <script type="module" src="./packages/@smotaal/tokenizer/examples/browser/demo.js"></script>
   <link rel="stylesheet" href="./packages/@smotaal/tokenizer/examples/browser/styles.css" />
 </head>
 
