--- a/packages/tokenizer/examples/samples/complex.html
+++ b/packages/tokenizer/examples/samples/complex.html
@@ -42,9 +42,9 @@
           color: var(--color, var(--markup-color, var(--markup-light-text, currentColor)));
         }
       </style>
-      <pre id="source-code" class="markup-container" hidden>
+      <pre id="source-code" class="markup-container">
       <!-- Script Element with "src" and no "content" -->
-      <script src="./ui.js"></script>
+      <!-- <script src="./ui.js"></script> -->
     </pre>
       <!-- Script Element type "module" with valid JavaScript "content" -->
       <script type="module">
