--- a/experimental/index.html
+++ b/experimental/index.html
@@ -6,15 +6,16 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-  <link rel="preload" href="../packages/tokenizer/examples/browser/ui.js" as="script" />
+  <!-- <link rel="preload" href="../packages/tokenizer/examples/browser/ui.js" as="script" /> -->
   <script type="module" src="../packages/tokenizer/browser/experimental.extended.js"></script>
   <script type="module" src="../packages/tokenizer/examples/browser/demo.js"></script>
   <link rel="stylesheet" href="../packages/tokenizer/examples/browser/styles.css" />
+  <link rel="stylesheet" href="/pholio/styles/fonts/iosevka/iosevka.css" />
 </head>
 
 <body>
-  <pre id="source-code" class="markup-container" hidden>
-      <script src="../packages/tokenizer/examples/browser/ui.js"></script>
+  <pre id="source-code" class="markup-container">
+      <!-- <script src="../packages/tokenizer/examples/browser/ui.js"></script> -->
     </pre>
   <script type="module">
     import markup from '../packages/tokenizer/browser/experimental.extended.js';
