--- a/experimental/playground.html
+++ b/experimental/playground.html
@@ -2,27 +2,29 @@
 <html>
 
 <head>
-  <title>SMotaal's Markup (Experimental)</title>
+  <title>SMotaal's Markup (Playground)</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
   <!-- <base href="/markup/experimental/"/> -->
-  <link rel="preload" href="/markup/packages/tokenizer/examples/browser/ui.js" as="script" />
+  <!-- <link rel="preload" href="/markup/packages/tokenizer/examples/browser/ui.js" as="script" /> -->
   <script type="module" src="/markup/packages/tokenizer/browser/experimental.js"></script>
   <script type="module" src="/markup/packages/tokenizer/examples/browser/demo.js"></script>
   <link rel="stylesheet" href="/markup/packages/tokenizer/examples/browser/styles.css" />
+  <link rel="stylesheet" href="/pholio/styles/fonts/iosevka/iosevka.css" />
 </head>
 
 <body>
-  <pre id="source-code" class="markup-container" hidden>
-      <script src="/markup/packages/tokenizer/examples/browser/ui.js"></script>
+  <pre id="source-code" class="markup-container">
+      <!-- <script src="/markup/packages/tokenizer/examples/browser/ui.js"></script> -->
     </pre>
   <script type="module">
     import markup from '/markup/packages/tokenizer/browser/experimental.js';
     import demo from '/markup/packages/tokenizer/examples/browser/demo.js';
+    import dynamicImport from '/browser/dynamicImport.js';
     (async () => {
       try {
-        const experiment = await import('./playground.js');
+        const experiment = await dynamicImport('./playground.js');
         demo(markup, await experiment.default(markup));
       } catch (exception) {
         (document.body.querySelector('.markup-container') || document.body).appendChild(new Text(`${exception}`));
