--- a/markup.html
+++ b/markup.html
@@ -8,10 +8,11 @@
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
   <link rel="preload" href="./packages/tokenizer/examples/browser/ui.js" as="script" />
   <link rel="stylesheet" href="./packages/tokenizer/examples/browser/styles.css" />
+  <link rel="stylesheet" href="/pholio/styles/fonts/iosevka/iosevka.css" />
 </head>
 
 <body>
-  <pre id="source-code" class="markup-container" hidden>
+  <pre id="source-code" class="markup-container">
       <script src="./packages/tokenizer/examples/browser/ui.js"></script>
     </pre>
   <script type="module">
