Remove latent references to `ui.js`

--- a/markup.html
+++ b/markup.html
@@ -6,15 +6,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-  <link rel="preload" href="./packages/tokenizer/examples/browser/ui.js" as="script" />
   <link rel="stylesheet" href="./packages/tokenizer/examples/browser/styles.css" />
   <link rel="stylesheet" href="/pholio/styles/fonts/iosevka/iosevka.css" />
 </head>
 
 <body>
-  <pre id="source-code" class="markup-container">
-      <script src="./packages/tokenizer/examples/browser/ui.js"></script>
-    </pre>
+  <pre id="source-code" class="markup-container"></pre>
   <script type="module">
     // Stable Parser
     import * as markup from './packages/tokenizer/browser/extended.js';
