--- a/markup.preload.html
+++ b/markup.preload.html
@@ -6,7 +6,6 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-  <!-- <link rel="preload" href="./packages/tokenizer/examples/browser/ui.js" as="script" /> -->
   <script type="module" src="./packages/tokenizer/browser/extended.js"></script>
   <script type="module" src="./packages/tokenizer/examples/browser/demo.js"></script>
   <link rel="stylesheet" href="./packages/tokenizer/examples/browser/styles.css" />
@@ -14,9 +13,7 @@
 </head>
 
 <body>
-  <pre id="source-code" class="markup-container">
-      <!-- <script src="./packages/tokenizer/examples/browser/ui.js"></script> -->
-    </pre>
+  <pre id="source-code" class="markup-container"></pre>
   <script type="module">
     // Stable Parser
     import * as markup from './packages/tokenizer/browser/extended.js';
