--- a/experimental/playground.html
+++ b/experimental/playground.html
@@ -6,8 +6,6 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-  <!-- <base href="/markup/experimental/"/> -->
-  <!-- <link rel="preload" href="/markup/packages/tokenizer/examples/browser/ui.js" as="script" /> -->
   <script type="module" src="/markup/packages/tokenizer/browser/experimental.js"></script>
   <script type="module" src="/markup/packages/tokenizer/examples/browser/demo.js"></script>
   <link rel="stylesheet" href="/markup/packages/tokenizer/examples/browser/styles.css" />
@@ -15,9 +13,7 @@
 </head>
 
 <body>
-  <pre id="source-code" class="markup-container">
-      <!-- <script src="/markup/packages/tokenizer/examples/browser/ui.js"></script> -->
-    </pre>
+  <pre id="source-code" class="markup-container"></pre>
   <script type="module">
     import markup from '/markup/packages/tokenizer/browser/experimental.js';
     import demo from '/markup/packages/tokenizer/examples/browser/demo.js';
