--- a/experimental/playground.html
+++ b/experimental/playground.html
@@ -15,9 +15,10 @@
 <body>
   <pre id="source-code" class="markup-container"></pre>
   <script type="module">
-    import markup from '/markup/packages/tokenizer/browser/experimental.js';
+    // import markup from '/markup/packages/tokenizer/browser/experimental.js';
     import demo from '/markup/packages/tokenizer/examples/browser/demo.js';
     import dynamicImport from '/browser/dynamicImport.js';
+    import markup from '/markup/packages/tokenizer/browser/experimental.extended.js';
     (async () => {
       try {
         const experiment = await dynamicImport('./playground.js');
