--- a/markup.preload.html
+++ b/markup.preload.html
@@ -9,7 +9,7 @@
   <script type="module" src="./packages/tokenizer/browser/extended.js"></script>
   <script type="module" src="./packages/tokenizer/examples/browser/demo.js"></script>
   <link rel="stylesheet" href="./packages/tokenizer/examples/browser/styles.css" />
-  <link rel="stylesheet" href="/pholio/styles/fonts/iosevka/iosevka.css" />
+  <link rel="stylesheet" href="/fonts/iosevka.css" />
 </head>
 
 <body>
