--- a/experimental/es/es.html
+++ b/experimental/es/es.html
@@ -9,7 +9,7 @@
   <script type="module" src="/markup/packages/tokenizer/browser/experimental.js"></script>
   <script type="module" src="/markup/packages/tokenizer/examples/browser/demo.js"></script>
   <link rel="stylesheet" href="/markup/packages/tokenizer/examples/browser/styles.css" />
-  <link rel="stylesheet" href="/pholio/styles/fonts/iosevka/iosevka.css" />
+  <link rel="stylesheet" href="/fonts/iosevka.css" />
 </head>
 
 <body>
