--- a/markup.html
+++ b/markup.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
   <link rel="stylesheet" href="./packages/tokenizer/examples/browser/styles.css" />
-  <link rel="stylesheet" href="/pholio/styles/fonts/iosevka/iosevka.css" />
+  <link rel="stylesheet" href="/fonts/iosevka.css" />
 </head>
 
 <body>
