--- a/packages/tokenizer/examples/browser/dist.html
+++ b/packages/tokenizer/examples/browser/dist.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
   <link rel="stylesheet" href="./styles.css" />
-  <link rel="stylesheet" href="/pholio/styles/fonts/iosevka/iosevka.css"
-        onerror="this.onerror=this.remove();this.href='//smotaal.io/pholio/styles/fonts/iosevka/iosevka.css';" />
+  <link rel="stylesheet" href="/fonts/iosevka.css"
+        onerror="this.onerror=this.remove();this.href='//smotaal.io/fonts/iosevka.css';" />
 </head>
 
 <body>
