--- a/updates.html
+++ b/updates.html
@@ -4,7 +4,7 @@
     <title>SMotaal's Markup Updates</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-    <link rel="stylesheet" href="/pholio/styles/fonts/iosevka/iosevka.css" />
+    <link rel="stylesheet" href="/fonts/iosevka.css" />
 		<link rel="stylesheet" href="/pholio/styles/styles.css" />
 		<link rel="stylesheet" href="/markout/styles/sections.css" />
     <style>
