--- a/experimental/playground.html
+++ b/experimental/playground.html
@@ -6,17 +6,19 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+  <meta name="theme-color" content="#999">
+  <link rel="manifest" href="/markup/manifest.webmanifest">
   <script type="module" src="/markup/packages/tokenizer/browser/experimental.js"></script>
-  <script type="module" src="/markup/packages/tokenizer/examples/browser/demo.js"></script>
-  <link rel="stylesheet" href="/markup/packages/tokenizer/examples/browser/styles.css" />
+  <script type="module" src="/markup/packages/tokenizer/browser/demo/demo.js"></script>
   <link rel="stylesheet" href="/fonts/iosevka.css" />
+  <link rel="stylesheet" href="/markup/packages/tokenizer/browser/demo/demo.css" />
 </head>
 
 <body>
   <pre id="source-code" class="markup-container"></pre>
   <script type="module">
     // import markup from '/markup/packages/tokenizer/browser/experimental.js';
-    import demo from '/markup/packages/tokenizer/examples/browser/demo.js';
+    import demo from '/markup/packages/tokenizer/browser/demo/demo.js';
     import dynamicImport from '/browser/dynamicImport.js';
     import markup from '/markup/packages/tokenizer/browser/experimental.extended.js';
     (async () => {
