--- a/markup.html
+++ b/markup.html
@@ -6,8 +6,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-  <link rel="stylesheet" href="./packages/tokenizer/examples/browser/styles.css" />
+  <meta name="theme-color" content="#333f46">
+  <meta name="background-color" content="#999999">
+  <link rel="icon" sizes="72x72" href="/markup/assets/icon-72x72.png">
+  <link rel="icon" sizes="192x192" href="/markup/assets/icon-192x192.png">
+  <link rel="apple-touch-icon" href="/markup/assets/icon-192x192.png">
   <link rel="stylesheet" href="/fonts/iosevka.css" />
+  <link rel="manifest" href="./manifest.webmanifest">
+  <link rel="stylesheet" href="./packages/tokenizer/browser/demo/demo.css" />
 </head>
 
 <body>
@@ -27,7 +33,7 @@
     markup.parsers.push(baselineParser);
 
     // Actual Demo
-    import demo from './packages/tokenizer/examples/browser/demo.js';
+    import demo from './packages/tokenizer/browser/demo/demo.js';
     demo(markup);
   </script>
 </body>
