Swaps /browser/dynamic-import.js (instead of dynamicImport.js)

--- a/experimental/es/index.html
+++ b/experimental/es/index.html
@@ -22,7 +22,7 @@
   <pre id="source-code" class="markup-container"></pre>
   <script type="module">
     import demo from '/markup/packages/tokenizer/browser/demo/demo.js';
-    import dynamicImport from '/browser/dynamicImport.js';
+    import dynamicImport from '/browser/dynamic-import.js';
     // import markup from '/markup/packages/tokenizer/browser/experimental.js';
     import markup from '/markup/packages/tokenizer/browser/experimental.extended.js';
     (async () => {
