--- a/experimental/playground.html
+++ b/experimental/playground.html
@@ -19,7 +19,7 @@
   <script type="module">
     // import markup from '/markup/packages/tokenizer/browser/experimental.js';
     import demo from '/markup/packages/tokenizer/browser/demo/demo.js';
-    import dynamicImport from '/browser/dynamicImport.js';
+    import dynamicImport from '/browser/dynamic-import.js';
     import markup from '/markup/packages/tokenizer/browser/experimental.extended.js';
     (async () => {
       try {
