Add `Content-Security-Policy: connect-src *` headers

--- a/experimental/index.html
+++ b/experimental/index.html
@@ -5,7 +5,7 @@
   <title>SMotaal's Markup (Experimental)</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';connect-src *;" />
   <meta name="theme-color" content="#333f46">
   <meta name="background-color" content="#999999">
   <link rel="icon" sizes="72x72" href="/markup/assets/icon-72x72.png">
