--- a/experimental/playground.html
+++ b/experimental/playground.html
@@ -5,7 +5,7 @@
   <title>SMotaal's Markup (Playground)</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';connect-src *;" />
   <meta name="theme-color" content="#999">
   <link rel="manifest" href="/markup/manifest.webmanifest">
   <script type="module" src="/markup/packages/tokenizer/browser/experimental.js"></script>
