--- a/experimental/playground.html
+++ b/experimental/playground.html
@@ -8,6 +8,7 @@
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';connect-src *;" />
   <meta name="theme-color" content="#999">
   <link rel="manifest" href="/markup/manifest.webmanifest">
+  <script>(typeof self !== 'object' || !self || self.globalThis === self || (self.globalThis = self))</script>
   <script type="module" src="/markup/packages/tokenizer/browser/experimental.js"></script>
   <script type="module" src="/markup/packages/tokenizer/browser/demo/demo.js"></script>
   <link rel="stylesheet" href="/fonts/iosevka.css" />
