--- a/packages/tokenizer/browser/demo/index.html
+++ b/packages/tokenizer/browser/demo/index.html
@@ -8,6 +8,7 @@
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';connect-src *;" />
   <meta name="theme-color" content="#333f46">
   <meta name="background-color" content="#999999">
+  <script>(typeof self !== 'object' || !self || self.globalThis === self || (self.globalThis = self))</script>
   <link rel="icon" sizes="72x72" href="./icon-72x72.png">
   <link rel="icon" sizes="192x192" href="./icon-192x192.png">
   <link rel="apple-touch-icon" href="./icon-192x192.png">
