--- a/experimental/playground.html
+++ b/experimental/playground.html
@@ -5,7 +5,8 @@
   <title>SMotaal's Markup (Playground)</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <meta http-equiv="Content-Security-Policy" content="script-src 'unsafe-inline' 'self' https://unpkg.com/@smotaal.io/;connect-src *;" />
+  <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self' https://* http://*.smotaal.io; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://unpkg.com/@smotaal.io/ https://*.smotaal.io; connect-src *;" />
   <meta name="theme-color" content="#999">
   <link rel="manifest" href="/markup/manifest.webmanifest">
   <script>(typeof self !== 'object' || !self || self.globalThis === self || (self.globalThis = self))</script>
