--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>SMotaal's Markup</title>
     <meta http-equiv="refresh" content="0; URL=/#/markup/README.md" />
+    <meta name=color-scheme content="light dark" />
   </head>
   <body>
     <p>This page has moved <a href="/#/markup/README.md">here</a>.</p>
