--- a/packages/markup/samples/complex.html
+++ b/packages/markup/samples/complex.html
@@ -14,6 +14,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover"
     />
+    <!-- Self-closing tags with quoted and unquoted attributes -->
+    <meta name=color-scheme content="light dark" />
   </head>
 
   <body>
