--- a/packages/tokenizer/index.html
+++ b/packages/tokenizer/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>SMotaal's Tokenizer</title>
   <meta http-equiv="refresh" content="0; URL=/#/markup/packages/tokenizer/README.md" />
+  <meta name=color-scheme content="light dark" />
 </head>
 
 <body>
