--- a/experimental/index.html
+++ b/experimental/index.html
@@ -9,6 +9,7 @@
         content="default-src 'self' https://* http://*.smotaal.io; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://unpkg.com/@smotaal.io/ https://*.smotaal.io; connect-src *;" />
   <meta name="theme-color" content="#333f46">
   <meta name="background-color" content="#999999">
+  <meta name=color-scheme content="light dark" />
   <script>(typeof self !== 'object' || !self || self.globalThis === self || (self.globalThis = self))</script>
   <link rel="icon" sizes="72x72" href="/markup/assets/icon-72x72.png">
   <link rel="icon" sizes="192x192" href="/markup/assets/icon-192x192.png">
