--- a/experimental/playground.html
+++ b/experimental/playground.html
@@ -8,6 +8,7 @@
   <meta http-equiv="Content-Security-Policy"
         content="default-src 'self' https://* http://*.smotaal.io; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://unpkg.com/@smotaal.io/ https://*.smotaal.io; connect-src *;" />
   <meta name="theme-color" content="#999">
+  <meta name="color-scheme" content="dark light">
   <link rel="manifest" href="/markup/manifest.webmanifest">
   <script>(typeof self !== 'object' || !self || self.globalThis === self || (self.globalThis = self))</script>
   <script type="module" src="/markup/packages/tokenizer/browser/experimental.js"></script>
