--- a/packages/markup/samples/demo.html
+++ b/packages/markup/samples/demo.html
@@ -12,6 +12,7 @@
   <base href="." />
   <meta name="viewport"
         content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover" />
+  <meta name=color-scheme content="light dark" />
 
   <link rel="stylesheet" href="styles.css" />
 
