--- a/experimental/es/index.html
+++ b/experimental/es/index.html
@@ -16,6 +16,7 @@
   <link rel="apple-touch-icon" href="/markup/assets/icon-192x192.png">
   <link rel="stylesheet" href="/fonts/iosevka.css" />
   <link rel="manifest" href="./manifest.webmanifest">
+  <link rel="example" href="./example">
   <script type="module" src="/markup/packages/tokenizer/browser/experimental.js"></script>
   <script type="module" src="/markup/packages/markup/browser/demo.js"></script>
   <link rel="stylesheet" href="/markup/packages/markup/browser/demo.css" />
