--- a/experimental/playground.html
+++ b/experimental/playground.html
@@ -10,6 +10,7 @@
   <meta name="theme-color" content="#999">
   <meta name="color-scheme" content="dark light">
   <link rel="manifest" href="/markup/manifest.webmanifest">
+  <link rel="example" href="./example">
   <script>(typeof self !== 'object' || !self || self.globalThis === self || (self.globalThis = self))</script>
   <script type="module" src="/markup/packages/tokenizer/browser/experimental.js"></script>
   <script type="module" src="/markup/packages/markup/browser/demo.js"></script>
