Refactor experimental/playground.js

--- a/experimental/playground.html
+++ b/experimental/playground.html
@@ -12,6 +12,7 @@
   <link rel="manifest" href="/markup/manifest.webmanifest">
   <link rel="example" href="./example">
   <script>(typeof self !== 'object' || !self || self.globalThis === self || (self.globalThis = self))</script>
+  <script type="module" src="./playground.js"></script>
   <script type="module" src="/markup/packages/tokenizer/browser/experimental.js"></script>
   <script type="module" src="/markup/packages/markup/browser/demo.js"></script>
   <link rel="stylesheet" href="/fonts/iosevka.css" />
